--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
-/* // <weight>: Use a value from 300 to 700
-// <uniquifier>: Use a unique and descriptive class name
+/* <weight>: Use a value from 300 to 700
+ <uniquifier>: Use a unique and descriptive class name
 
 .space-grotesk-<uniquifier> {
   font-family: "Space Grotesk", sans-serif;
@@ -8,23 +8,163 @@
   font-style: normal;
 } */
 
+/* <weight>: Use a value from 100 to 700
+<uniquifier>: Use a unique and descriptive class name
+
+.ibm-plex-sans-<uniquifier> {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+} */
+
+
 * {
   box-sizing: border-box;
   margin: 0;
 }
 
+body {
+  width: 95%;
+  height: auto;
+  margin: 25px auto;
+  background-color: #f0f8ff;
+}
+
 h1 {
   color: #000;
   font-family: "Space Grotesk", sans-serif;
-  font-size: 2em;
+  font-size: 1.25em;
   font-style: normal;
   font-weight: 500;
+  justify-content: center;
+  padding: 15px 0px 15px 0px;
+  line-height: 20px;
+  text-transform: uppercase;
 }
+
 
 h2 {
   color: #000;
   font-family: "Space Grotesk", sans-serif;
-  font-size: 1em;
+  font-size: 1.25em;
   font-style: normal;
   font-weight: 500;
+  padding: 15px 0px 15px 0px;
+  line-height: 20px;
+  text-transform: none;
+}
+
+hr {
+  border-bottom: 1.5px solid #000;
+  border-top: 0px solid #000;
+  margin: 0;
+  padding: 0;
+}
+
+nav {
+  padding-top: 15px;
+  font-family: "IBM Plex Sans", sans-serif;
+  text-align: right;
+  line-height: 20px;
+}
+
+nav ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+nav ul li {
+  display: inline;
+}
+
+nav ul li a {
+  text-decoration: none;
+  padding: 0px 0px 0px 20px;
+  color: #000;
+}
+
+nav ul li a:link {
+  text-decoration: none;
+  padding: 0px 0px 0px 20px;
+  color: #000;
+}
+
+nav ul li a:visited {
+  text-decoration: none;
+  padding: 0px 0px 0px 20px;
+  color: #000;
+}
+
+nav ul li a:hover {
+  text-decoration: none;
+  padding: 0px 0px 0px 20px;
+  color: #000dff;
+}
+
+.heading {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+}
+
+p {
+  font-family: "IBM Plex Sans", sans-serif;
+  padding: 10px 0px 10px 0px;
+}
+
+#box {
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+}
+
+#left {
+  border: 1.5px solid #000;
+  padding: 0px 15px;
+}
+
+#right {
+  background-image: url("https://live.staticflickr.com/65535/54437776455_3c4f238a16_o.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+footer {
+  text-align: center;
+  padding-top: 30px;
+}
+
+
+footer p {
+  color: #000;
+  text-decoration: none;
+
+footer p a {
+  color: #000;
+  text-decoration: none;
+}
+}
+
+footer p a {
+  color: #000;
+  text-decoration: none;
+}
+
+footer p a:link {
+  color: #000;
+  text-decoration: none;
+}
+
+footer p a:visited {
+  color: #000;
+  text-decoration: none;
+}
+
+footer p a:hover {
+  color: #000dff;
+  text-decoration: none;
 }
